# scalar_replacement_of_aggregates

./: .gitignore  CMakeLists.txt  README.md
doc/: doc
include/: ChunkOpsLoweringPass.hpp  CustomScalarReplacementOfAggregatesPass.hpp  ExpandMemOpsPass.hpp  GepiCanonicalizationPass.hpp  LoopUnrollPass.hpp  PrintModulePass.hpp  PtrIteratorSimplifyPass.hpp  SROA_LoopUnrollPass.h  cmdline_options_parser.hpp  cpu_callbacks.hpp  fpga_callbacks.hpp
src/: ChunkOpsLoweringPass.cpp  CustomScalarReplacementOfAggregatesPass.cpp  GepiCanonicalizationPass.cpp  LoopUnrollPass.cpp  PrintModulePass.cpp  SROA_LoopRotation.cpp  SROA_LoopUnrollPass.cpp  cmdline_options_parser.cpp  main.cpp
test_cases/: bf.ll  complex_test.c  jpeg.ll  test1.c  test1.ll  test2.c  test2.ll  test3.c  test3.ll  test4.ll  test5.ll  test6.c  test6.ll  test7.c  test8.c  test9.c  test_fun_cache.c
test_cases/CHStone_timed/adpcm/: adpcm.c
test_cases/CHStone_timed/aes/: aes.c
test_cases/CHStone_timed/blowfish/: bf.c
test_cases/CHStone_timed/dfadd/: dfadd.c
test_cases/CHStone_timed/dfdiv/: dfdiv.c
test_cases/CHStone_timed/dfmul/: dfmul.c
tests/: test_all.sh
tests/CHStone_clean/: compile_all.sh
tests/CHStone_timed/: compile_all.sh
tests/bins/: opt_adpcm.ll  opt_aes.ll  opt_bf.ll  opt_dfadd.ll  opt_dfdiv.ll  opt_dfmul.ll  opt_dfsin.ll  opt_gsm.ll  opt_jpeg.ll  opt_mips.ll  opt_mpeg2.ll  opt_sha.ll
tests/test_cases/: adpcm.ll  aes.ll  bf.ll  dfadd.ll  dfdiv.ll  dfmul.ll  dfsin.ll  gsm.ll  jpeg.ll  mips.ll  mpeg2.ll  sha.ll
tests/timed_test_cases/: adpcm.ll  aes.ll  bf.ll  dfadd.ll  dfdiv.ll  dfmul.ll  dfsin.ll  gsm.ll  jpeg.ll  mips.ll  mpeg2.ll  sha.ll
(+24 files in other folders)
